--- a/Frontend/corporate-symphony/package.json
+++ b/Frontend/corporate-symphony/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.1.0-alpha.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.21.3",
+    "react-ui-cards": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
